--- a/#source/scss/font.scss
+++ b/#source/scss/font.scss
@@ -35,7 +35,7 @@
 }
 @mixin Text-Style-5 {
   font-family: Exo2;
-  font-size: 64px;
+  @include adaptiv-font(64, 36, 0);
   font-weight: bold;
   text-align: left;
   color: #ffffff;
@@ -69,7 +69,7 @@
 }
 @mixin Text-Style-6 {
   font-family: Exo2;
-  font-size: 24px;
+  @include adaptiv-font(24, 18, 0);
   text-align: left;
   color: #000000;
 }
