--- a/#source/scss/font.scss
+++ b/#source/scss/font.scss
@@ -28,7 +28,7 @@
 }
 @mixin Text-Style-7 {
   font-family: Exo2;
-  font-size: 64px;
+  @include adaptiv-font(64,36,0);
   font-weight: bold;
   text-align: left;
   color: #333333;
@@ -50,7 +50,7 @@
 }
 @mixin Text-Style-8 {
   font-family: Exo2;
-  font-size: 36px;
+  @include adaptiv-font(36, 30, 0);
   text-align: left;
   color: #333333;
 }
