--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -180,7 +180,99 @@ $md4:479.98;			//брейкпоинт 4
 }
 
 //===================================================================================================================
+//-переменные для заготовки
+$mw-BROOOG: $mw + ($pp * 2);//1360 ширина ограничивающего контейнера учитывая два padding
+$mw-content: 46.93%;//Размер контента в %
+$mw-content-num: 0.4693;//Размер контента в 0.5
+$mw-image: 0.5307;//Размер изображения в 0.5
 
+.section {
+ overflow: hidden;
+ 
+ @media (min-width:992.98px){
+	display: flex;
+ }
+
+
+
+ &__content {
+	 flex: 0 0 100%; 
+	 display: flex;
+ }
+
+ &__container {
+	max-width: $mw-BROOOG + px;
+	padding: 0px #{$pp + px};
+	margin: 0 auto;
+	display: flex;
+	align-items: center;
+ }
+
+ &__body {
+	padding: 0; //отступы в контенте от 767 и ниже
+
+	@media (min-width:992.98px){
+	 width: $mw-content;
+	 padding: 122px 141px 122px 120px; //отступы в контенте от 767 и выше
+	}
+ }
+
+ &__image {
+
+	@media (min-width:992.98px){ 
+	 position: relative;
+	 flex: 0 0 calc(((100vw - #{($pp * 2) + px}) * #{$mw-image}) + #{$pp + px});
+	 padding: 0 0 42.9% 0;
+	 transform: translate(-100%, 0px);
+	}
+
+	@media (min-width: $mw-BROOOG + px){
+	 flex: 0 0 calc(100vw - (((100vw - #{$mw-BROOOG + px}) / 2) + ((#{$mw-BROOOG + px} - #{($pp * 2) + px}) * #{$mw-content-num}) + #{$pp + px}));
+	}
+
+	@media (max-width:$md2+px){
+		margin: 0px 0px 40px 0px;
+	}
+
+	img{
+	 max-width: 100%;
+
+	 @media (min-width:992.98px){
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		top: 0;
+		left: 0;
+		object-fit: cover;
+		object-position: left;
+	 }
+	}
+ }
+}
+
+.body-section {
+
+	// .body-section__title
+	&__title{
+		@include Text-Style-8;
+		margin: 0px 0px 34px 0px;
+		@media (max-width:$md2+px){
+			margin: 0px 0px 40px 0px;
+		}
+	}
+	
+	&__text {
+		@include Text-Style-9;
+		@include adaptive-size(100, 40, margin-bottom);
+	}
+}
+
+.section-wrapper__header{
+	@include Text-Style-7;
+	@include adaptive-size(150, 100, padding-top);
+	@include adaptive-size(150, 100, padding-bottom);
+	text-align: center;
+ }
 //===================================================================================================================
 
 //===================================================================================================================
