--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -193,7 +193,9 @@ $mw-image: 0.5307;//Размер изображения в 0.5
 	display: flex;
  }
 
-
+ &.reverse{
+	 @include adaptive-size(312, 113, padding-top);
+ }
 
  &__content {
 	 flex: 0 0 100%; 
@@ -211,6 +213,12 @@ $mw-image: 0.5307;//Размер изображения в 0.5
  &__body {
 	padding: 0; //отступы в контенте от 767 и ниже
 
+	&>.main__btn{
+		.main__btn-link{
+			margin: 0px 0px 5px 0px;
+		}
+	}
+
 	@media (min-width:992.98px){
 	 width: $mw-content;
 	 padding: 122px 141px 122px 120px; //отступы в контенте от 767 и выше
@@ -224,6 +232,11 @@ $mw-image: 0.5307;//Размер изображения в 0.5
 	 flex: 0 0 calc(((100vw - #{($pp * 2) + px}) * #{$mw-image}) + #{$pp + px});
 	 padding: 0 0 42.9% 0;
 	 transform: translate(-100%, 0px);
+
+	 &.reverse{
+		transform: translate(0, 0px);
+		padding: 0 0 47.66% 0;
+	 }
 	}
 
 	@media (min-width: $mw-BROOOG + px){
@@ -245,6 +258,10 @@ $mw-image: 0.5307;//Размер изображения в 0.5
 		left: 0;
 		object-fit: cover;
 		object-position: left;
+
+		&.reverse{
+			object-position: right;
+		}
 	 }
 	}
  }
